--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
+    "flatpickr": "^4.6.2",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.2.1",
     "places.js": "^1.16.4",
