--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "campster",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.4.1",
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
     "flatpickr": "^4.6.2",
